--- a/frogtown.html
+++ b/frogtown.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<link rel="icon" href="img/favicon.png">	
+	<link rel="icon" href="img/favicon.png">
 
 	<!-- CSS Stylesheets -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -17,6 +17,20 @@
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Roboto|Berkshire+Swash|" rel="stylesheet">
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-92391322-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-92391322-1');
+	</script>
+
 </head>
 
 <body>
@@ -76,10 +90,12 @@
 				</div>
 				<div class="item-description-info-2">
 					<p>
-						Frogtown Farm, an urban farm located in St. Paul Minneapolis, approached us to make a new website for them. Getting inspiration from their mission and colors I cutomize the frontend of the squarespace theme.
+						Frogtown Farm, an urban farm located in St. Paul Minneapolis, approached us to make a new website for them. Getting inspiration
+						from their mission and colors I cutomize the frontend of the squarespace theme.
 					</p>
 					<p>
-						The newly finished site is simple and easy to use. Using CSS Media Queries, the website structure is fully responsive, and compatible on a number of platforms.
+						The newly finished site is simple and easy to use. Using CSS Media Queries, the website structure is fully responsive, and
+						compatible on a number of platforms.
 					</p>
 				</div>
 			</div>
