--- a/glorybound.html
+++ b/glorybound.html
@@ -17,6 +17,20 @@
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Roboto|Berkshire+Swash|" rel="stylesheet">
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-92391322-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-92391322-1');
+	</script>
+
 </head>
 
 <body>
@@ -76,10 +90,13 @@
 				</div>
 				<div class="item-description-info-2">
 					<p>
-                        Website redesign for Glorybound, a non profit family restoration center that helps families of men and women who are struggling with alcohol and substance abuse based in Minneapolis, MN. Their previous website was outdated, so I was asked to redesign and develop their new site.
+						Website redesign for Glorybound, a non profit family restoration center that helps families of men and women who are struggling
+						with alcohol and substance abuse based in Minneapolis, MN. Their previous website was outdated, so I was asked to redesign
+						and develop their new site.
 					</p>
 					<p>
-                        The newly revamped website is clean and minimal providing a better experience for users and a color scheme that would better portray Glorybound's organization. Powered by WordPress and built with custom HTML, CSS, and JQUERY.
+						The newly revamped website is clean and minimal providing a better experience for users and a color scheme that would better
+						portray Glorybound's organization. Powered by WordPress and built with custom HTML, CSS, and JQUERY.
 					</p>
 				</div>
 			</div>
