--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Roboto|Berkshire+Swash|" rel="stylesheet">
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-92391322-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-92391322-1');
+	</script>
+
 </head>
 
 <body>
@@ -67,18 +81,21 @@
 					<div class="hero-section-title">
 						<h1>
 							<span class="span-block">
-								Design<span class="span-period">.</span>
+								Design
+								<span class="span-period">.</span>
 							</span>
 							<span class="span-block">
 								And
 							</span>
 							<span class="span-block">
-								Develop<span class="span-period">.</span>
+								Develop
+								<span class="span-period">.</span>
 							</span>
 						</h1>
 						<h2>
 							<span>
-								Passionate about technology and exploring the vast space of Front End and Design<span class="span-period">.</span>
+								Passionate about technology and exploring the vast space of Front End and Design
+								<span class="span-period">.</span>
 							</span>
 						</h2>
 					</div>
