--- a/umcpi.html
+++ b/umcpi.html
@@ -17,6 +17,20 @@
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Roboto|Berkshire+Swash|" rel="stylesheet">
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-92391322-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-92391322-1');
+	</script>
+
 </head>
 
 <body>
@@ -76,10 +90,12 @@
 				</div>
 				<div class="item-description-info-2">
 					<p>
-                        UMCPI, a non profit that offers training and consulting to public safety agencies, needed a website redesign because their old site was outdated.
+						UMCPI, a non profit that offers training and consulting to public safety agencies, needed a website redesign because their
+						old site was outdated.
 					</p>
 					<p>
-                        The new website was built with mobile first in mind. Using CSS media queries, the website is fully responsive and looks great both on desktop and mobile. The website was built with wordpress for ease of updates without a developer.
+						The new website was built with mobile first in mind. Using CSS media queries, the website is fully responsive and looks great
+						both on desktop and mobile. The website was built with wordpress for ease of updates without a developer.
 					</p>
 				</div>
 			</div>
