--- a/vanguard.html
+++ b/vanguard.html
@@ -17,6 +17,20 @@
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Roboto|Berkshire+Swash|" rel="stylesheet">
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-92391322-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-92391322-1');
+	</script>
+
 </head>
 
 <body>
@@ -97,7 +111,7 @@
 						<span>
 							<span>Simple</span>
 							<span>and</span>
-							<span>Easy to use</span>   
+							<span>Easy to use</span>
 						</span>
 					</h2>
 					<p>
