--- a/frogtown.html
+++ b/frogtown.html
@@ -56,7 +56,7 @@
 	<header>
 		<div class="nav-bar">
 			<div class="logo-wrapper">
-				<a href="index.html">
+				<a href="index">
 					<div class="logo">
 						Pv
 					</div>
