--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<header id="index-header">
 		<div class="nav-bar" id="index-nav-bar">
 			<div class="logo-wrapper">
-				<a href="index.html">
+				<a href="index">
 					<div class="logo" id="index-logo">
 						Pv
 					</div>
@@ -117,14 +117,14 @@
 					<div class="work-section-item right">
 						<div class="work-section-item-inner">
 							<div class="project-item_FigureWrapper">
-								<a href="vanguard.html">
+								<a href="vanguard">
 									<figure class="project-item_Figure">
 										<img src="img/iPhone-6-Isometric-view-Mockup.png" alt="">
 									</figure>
 								</a>
 							</div>
 							<div class="project-item_DescriptionWrapper">
-								<a href="vanguard.html">
+								<a href="vanguard">
 									<div class="project-item_description">
 										<div class="project-item_Title">
 											<h2>
@@ -152,14 +152,14 @@
 					<div class="work-section-item left">
 						<div class="work-section-item-inner">
 							<div class="project-item_FigureWrapper">
-								<a href="umcpi.html">
+								<a href="umcpi">
 									<figure class="project-item_Figure">
 										<img src="img/umcpi.png" alt="">
 									</figure>
 								</a>
 							</div>
 							<div class="project-item_DescriptionWrapper">
-								<a href="umcpi.html">
+								<a href="umcpi">
 									<div class="project-item_description">
 										<div class="project-item_Title">
 											<h2>
@@ -187,14 +187,14 @@
 					<div class="work-section-item right small">
 						<div class="work-section-item-inner">
 							<div class="project-item_FigureWrapper">
-								<a href="glorybound.html">
+								<a href="glorybound">
 									<figure class="project-item_Figure">
 										<img src="img/glorybound.png" alt="">
 									</figure>
 								</a>
 							</div>
 							<div class="project-item_DescriptionWrapper">
-								<a href="glorybound.html">
+								<a href="glorybound">
 									<div class="project-item_description">
 										<div class="project-item_Title">
 											<h2>
@@ -222,14 +222,14 @@
 					<div class="work-section-item left">
 						<div class="work-section-item-inner">
 							<div class="project-item_FigureWrapper">
-								<a href="frogtown.html">
+								<a href="frogtown">
 									<figure class="project-item_Figure">
 										<img src="img/frogtownfarm.png" alt="">
 									</figure>
 								</a>
 							</div>
 							<div class="project-item_DescriptionWrapper">
-								<a href="frogtown.html">
+								<a href="frogtown">
 									<div class="project-item_description">
 										<div class="project-item_Title">
 											<h2>
