--- a/frogtown.html
+++ b/frogtown.html
@@ -64,7 +64,7 @@
 			</div>
 			<div class="nav-menu-wrapper">
 				<div class="nav-menu">
-					<a href="index.html">
+					<a href="index">
 						&#10229;
 						<strong>Return</strong>
 					</a>
