--- a/vanguard.html
+++ b/vanguard.html
@@ -64,7 +64,7 @@
 			</div>
 			<div class="nav-menu-wrapper">
 				<div class="nav-menu">
-					<a href="www.phongxai.com">
+					<a href="https://www.phongxai.com">
 						&#10229;
 						<strong>Return</strong>
 					</a>
