--- a/vanguard.html
+++ b/vanguard.html
@@ -130,7 +130,7 @@
 			<div class="img-container">
 				<img src="img/screens.png" alt="">
 			</div>
-			<div class="img-container">
+			<div class="img-container web">
 				<img src="img/student2.png" alt="">
 			</div>
 		</section>
