--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<header id="index-header">
 		<div class="nav-bar" id="index-nav-bar">
 			<div class="logo-wrapper">
-				<a href="index">
+				<a href="index.html">
 					<div class="logo" id="index-logo">
 						Pv
 					</div>
@@ -81,21 +81,18 @@
 					<div class="hero-section-title">
 						<h1>
 							<span class="span-block">
-								Design
-								<span class="span-period">.</span>
+								Design<span class="span-period">.</span>
 							</span>
 							<span class="span-block">
 								And
 							</span>
 							<span class="span-block">
-								Develop
-								<span class="span-period">.</span>
+								Develop<span class="span-period">.</span>
 							</span>
 						</h1>
 						<h2>
 							<span>
-								Passionate about technology and exploring the vast space of Front End and Design
-								<span class="span-period">.</span>
+								Passionate about technology and exploring the vast space of Front End and Design<span class="span-period">.</span>
 							</span>
 						</h2>
 					</div>
@@ -117,14 +114,14 @@
 					<div class="work-section-item right">
 						<div class="work-section-item-inner">
 							<div class="project-item_FigureWrapper">
-								<a href="vanguard">
+								<a href="vanguard.html">
 									<figure class="project-item_Figure">
 										<img src="img/iPhone-6-Isometric-view-Mockup.png" alt="">
 									</figure>
 								</a>
 							</div>
 							<div class="project-item_DescriptionWrapper">
-								<a href="vanguard">
+								<a href="vanguard.html">
 									<div class="project-item_description">
 										<div class="project-item_Title">
 											<h2>
@@ -152,14 +149,14 @@
 					<div class="work-section-item left">
 						<div class="work-section-item-inner">
 							<div class="project-item_FigureWrapper">
-								<a href="umcpi">
+								<a href="umcpi.html">
 									<figure class="project-item_Figure">
 										<img src="img/umcpi.png" alt="">
 									</figure>
 								</a>
 							</div>
 							<div class="project-item_DescriptionWrapper">
-								<a href="umcpi">
+								<a href="umcpi.html">
 									<div class="project-item_description">
 										<div class="project-item_Title">
 											<h2>
@@ -187,14 +184,14 @@
 					<div class="work-section-item right small">
 						<div class="work-section-item-inner">
 							<div class="project-item_FigureWrapper">
-								<a href="glorybound">
+								<a href="glorybound.html">
 									<figure class="project-item_Figure">
 										<img src="img/glorybound.png" alt="">
 									</figure>
 								</a>
 							</div>
 							<div class="project-item_DescriptionWrapper">
-								<a href="glorybound">
+								<a href="glorybound.html">
 									<div class="project-item_description">
 										<div class="project-item_Title">
 											<h2>
@@ -222,14 +219,14 @@
 					<div class="work-section-item left">
 						<div class="work-section-item-inner">
 							<div class="project-item_FigureWrapper">
-								<a href="frogtown">
+								<a href="frogtown.html">
 									<figure class="project-item_Figure">
 										<img src="img/frogtownfarm.png" alt="">
 									</figure>
 								</a>
 							</div>
 							<div class="project-item_DescriptionWrapper">
-								<a href="frogtown">
+								<a href="frogtown.html">
 									<div class="project-item_description">
 										<div class="project-item_Title">
 											<h2>
@@ -258,11 +255,28 @@
 			</div>
 		</section>
 		<section class="section" id="contactSection">
-			<div class="contact-section">
-				<div class="contact-section-inner">
-					<!-- hello -->
+			<footer>
+				<div class="contact-section">
+					<div class="contact-section-inner clearfix">
+						<div class="contact-container">
+							<ul>
+								<!-- <li><a href="https://www.instagram.com/phongxaivang/">Instagram</a></li>
+								<li><a href="https://twitter.com/PhongxaiVang">Twitter</a></li>
+								<li><a href="https://www.linkedin.com/in/phongxaivang
+									">Linkedin</a></li>
+								<li><a href="https://www.behance.net/phongxai">Behance</a></li> -->
+								<li><a href="#">Instagram</a></li>
+								<li><a href="#">Twitter</a></li>
+								<li><a href="#">Linkedin</a></li>
+								<li><a href="#">Behance</a></li>
+							</ul>
+						</div>
+						<div class="contact-container cr">
+							&#169;	Phongxai Vang 2017
+						</div>
+					</div>
 				</div>
-			</div>
+			</footer>
 		</section>
 	</div>
 
