--- a/glorybound.html
+++ b/glorybound.html
@@ -56,7 +56,7 @@
 	<header>
 		<div class="nav-bar">
 			<div class="logo-wrapper">
-				<a href="index">
+				<a href="index.html">
 					<div class="logo">
 						Pv
 					</div>
@@ -64,7 +64,7 @@
 			</div>
 			<div class="nav-menu-wrapper">
 				<div class="nav-menu">
-					<a href="index">
+					<a href="index.html">
 						&#10229;
 						<strong>Return</strong>
 					</a>
@@ -106,6 +106,30 @@
 				<img src="img/glorybound-full.png" alt="">
 			</div>
 		</section>
+		<section class="section" id="contactSection">
+				<footer>
+					<div class="contact-section">
+						<div class="contact-section-inner clearfix">
+							<div class="contact-container">
+								<ul>
+									<!-- <li><a href="https://www.instagram.com/phongxaivang/">Instagram</a></li>
+									<li><a href="https://twitter.com/PhongxaiVang">Twitter</a></li>
+									<li><a href="https://www.linkedin.com/in/phongxaivang
+										">Linkedin</a></li>
+									<li><a href="https://www.behance.net/phongxai">Behance</a></li> -->
+									<li><a href="#">Instagram</a></li>
+									<li><a href="#">Twitter</a></li>
+									<li><a href="#">Linkedin</a></li>
+									<li><a href="#">Behance</a></li>
+								</ul>
+							</div>
+							<div class="contact-container cr">
+								&#169;	Phongxai Vang 2017
+							</div>
+						</div>
+					</div>
+				</footer>
+			</section>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="js/script.js"></script>
