--- a/frogtown.html
+++ b/frogtown.html
@@ -56,7 +56,7 @@
 	<header>
 		<div class="nav-bar">
 			<div class="logo-wrapper">
-				<a href="index.html">
+				<a href="index">
 					<div class="logo">
 						Pv
 					</div>
@@ -64,7 +64,7 @@
 			</div>
 			<div class="nav-menu-wrapper">
 				<div class="nav-menu">
-					<a href="index.html">
+					<a href="index">
 						&#10229;
 						<strong>Return</strong>
 					</a>
