--- a/frogtown.html
+++ b/frogtown.html
@@ -91,7 +91,7 @@
 				<div class="item-description-info-2">
 					<p>
 						Frogtown Farm, an urban farm located in St. Paul Minneapolis, approached us to make a new website for them. Getting inspiration
-						from their mission and colors I cutomize the frontend of the squarespace theme.
+						from their mission and colors I customize the frontend of the squarespace theme.
 					</p>
 					<p>
 						The newly finished site is simple and easy to use. Using CSS Media Queries, the website structure is fully responsive, and
