--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 										</div>
 										<div class="project-item_Work" id="project-item_work2">
 											<span class="project-item_Workdesc">
-												independent work
+												Independent work
 											</span>
 										</div>
 									</div>
